# iroha

./: Cargo.toml  Dockerfile.base  README.md  _dummy  docker-compose-local.yml  docker-compose-samekeys.yml  docker-compose-single.yml  docker-compose.single.yml  docker-compose.yml  hashes_match.md  peer.toml  permission_token.json  recipe.json
.github/workflows/: _iroha2-dev-pr-title.yml  _manual_bench.yml  iroha2-base.yml  iroha2-custom-image.yml  iroha2-dev-nightly.yml  iroha2-dev-pr-bench.yml  iroha2-dev-pr-static.yml  iroha2-dev-pr-title.yml  iroha2-dev-pr-unstable.yml  iroha2-dev-pr-wasm.yaml  iroha2-dev-pr-wasm.yml  iroha2-dev-pr.yml  iroha2-dev.yml  (+7 more)
cli/: Cargo.toml
client/: Cargo.toml
config/: iroha_test_config.toml
configs/: client.template.toml  peer.template.toml
core/: Cargo.toml
crates/iroha_multisig_data_model/: Cargo.toml
crates/iroha_multisig_data_model/src/: lib.rs
data_model/: Cargo.toml
defaults/: README.md  docker-compose.single.yml  docker-compose.yml  executor.wasm  genesis.json  testnet.md
genesis/: Cargo.toml
hooks/: pre-commit.sample
iroha/: recipe.json
iroha_cli/: Cargo.toml
p2p/: Cargo.toml
sample_params/: Cargo.toml
scripts/: build_wasm.sh  test_env.py  test_env.sh
smart_contract/: Cargo.toml
test_samples/: Cargo.toml
wasm/: README.md
wasm_samples/: Cargo.toml
wasm_samples/_inspect_query_context_in_trigger/: Cargo.toml
wasm_samples/_inspect_query_context_in_trigger/src/: lib.rs
wasm_samples/_inspect_query_context_in_txn_wasm/: Cargo.toml
wasm_samples/_inspect_query_context_in_txn_wasm/src/: lib.rs
(+252 files in other folders)
