[package]
name = "_inspect_query_context_in_trigger"

edition.workspace = true
version.workspace = true
authors.workspace = true

license.workspace = true

[lib]
crate-type = ['cdylib']

[dependencies]
iroha_trigger.workspace = true

panic-halt.workspace = true
dlmalloc.workspace = true
getrandom.workspace = true
