[package]
name = "_inspect_query_context_in_txn_wasm"

edition.workspace = true
version.workspace = true
authors.workspace = true

license.workspace = true

[lib]
crate-type = ['cdylib']

[dependencies]
iroha_smart_contract.workspace = true

panic-halt.workspace = true
dlmalloc.workspace = true
getrandom.workspace = true
parity-scale-codec.workspace = true
nonzero_ext.workspace = true
serde_json = { workspace = true, default-features = false }
